kubernetes/apps/forgejo/app/ingress-internal.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-internal
  namespace: forgejo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: internal
  rules:
    - host: susan.gs-farm.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-http
                port:
                  number: 3000
  tls:
    - secretName: forgejo-internal-tls
      hosts:
        - susan.gs-farm.net
